--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <View
+    android:layout_height="match_parent">
+   <!-- <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/line_color"/>
+        android:background="@color/line_color"/>-->
 
     <RelativeLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_below="@id/line"
-        android:layout_height="@dimen/y131"
+        android:layout_height="@dimen/y167"
         android:orientation="horizontal"
         android:background="@color/common_white">
 
         <net.lucode.hackware.magicindicator.MagicIndicator
             android:id="@+id/tb_near_indicator"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp" />
+            android:layout_height="match_parent"/>
 
         <LinearLayout
             android:id="@+id/fl_right"
