--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -288,6 +288,7 @@
                 </LinearLayout>
 
                 <View
+                    android:id="@+id/line_order_list"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/y1"
                     android:layout_marginLeft="@dimen/x135"
@@ -572,6 +573,45 @@
                         android:src="@drawable/user_detail" />
                 </LinearLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/y1"
+                    android:layout_marginLeft="@dimen/x135"
+                    android:background="@color/chat_update_divider_of_toolMenu" />
+
+                <!--代充后台-->
+                <LinearLayout
+                    android:id="@+id/ll_substitute_charge"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/y162"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/x72"
+                        android:layout_height="@dimen/y72"
+                        android:layout_marginLeft="@dimen/x45"
+                        android:src="@drawable/icon_charge" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/x12"
+                        android:text="@string/substitute_charge"
+                        android:textColor="@color/edit_user_value"
+                        android:textSize="@dimen/y42" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <ImageView
+                        android:layout_width="@dimen/x24"
+                        android:layout_height="@dimen/y42"
+                        android:layout_marginRight="@dimen/x48"
+                        android:src="@drawable/user_detail" />
+                </LinearLayout>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/y1"
